--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,6 +25,7 @@
 @import 'parts/main-search';
 @import 'parts/footer';
 @import 'parts/blog-post';
+@import 'parts/player-overlay';
 
 // Player card
 @import 'parts/player';
@@ -33,6 +34,7 @@
 @import 'parts/player-quick-look';
 @import 'parts/player-main-stats';
 @import 'parts/player-hazards';
+@import 'parts/recent-players';
 
 // Equipped tab
 @import 'parts/player-weapons';
