--- a/app/styles/parts/_player-main-stats.scss
+++ b/app/styles/parts/_player-main-stats.scss
@@ -1,6 +1,10 @@
 .player-main-stats {
   padding: $player-content-padding;
   border-top: 1px solid #eee;
+
+  .player.with-overlay & {
+    @include overlay-modifiers();
+  }
 }
 
 .player-main-stats__streak {
