--- a/app/views/player/overview.html
+++ b/app/views/player/overview.html
@@ -12,7 +12,7 @@
           </span>
         </div>
       </div>
-      <span class="player__edit shadow-z-1" ng-if="!subdomain && !$first" ng-click="toggleEdit(player)">
+      <span class="edit-player__btn shadow-z-1" ng-if="!subdomain && !$first" ng-click="toggleEdit(player)">
         <i class="material-icons">&#xE254;</i>
       </span>
     </div>
