--- a/app/styles/inc/_mixins.scss
+++ b/app/styles/inc/_mixins.scss
@@ -13,6 +13,14 @@
   box-shadow: inset 0px 10px 8px -10px rgba(0,0,0,0.75);
 }
 
+@mixin mild-inset-shadow() {
+  box-shadow: inset 0px 10px 8px -10px rgba(0,0,0,0.25);
+}
+
 @mixin tab-background($bg) {
   background-image: linear-gradient(180deg, $bg 0%, darken($bg, 10%) 50%, lighten($bg, 1%) 100%);
+}
+
+@mixin overlay-modifiers() {
+  filter: blur(3px);
 }
