--- a/app/views/player/index.html
+++ b/app/views/player/index.html
@@ -1,5 +1,5 @@
 <div class="player shadow-z-1"
-     ng-class="(player.isEditing || player.invalidResult) ? 'is-editing' : 'not-editing'"
+     ng-class="(player.isEditing || player.invalidResult) ? 'with-overlay' : 'not-editing'"
      ng-if="fireteam[0].name && $index < 3">
 
   <div ng-include="'views/player/overview.html'"></div>
@@ -50,8 +50,8 @@
     </div>
   </div>
 
-  <div class="edit-player">
-    <div class="edit-player__close" ng-click="toggleEdit(player)">
+  <div class="player-overlay">
+    <div class="player-overlay__close" ng-click="toggleEdit(player)">
       <i class="material-icons">&#xE5CD;</i>
     </div>
     <div ng-if="fireteam[0].name && $index < 3 && $index > -1">
@@ -63,8 +63,8 @@
           <input type="text" placeholder="{{fireteam[$index].name}}" class="form-control" ng-model="teammateName">
         </form>
       </div>
-      <div class="edit-player__actions" ng-if="!player.invalidResult">
-        <!--<div class="edit-player-action__header">
+      <div class="player-overlay__content" ng-if="!player.invalidResult">
+        <!--<div class="player-overlay-action__header">
           <span ng-bind="fireteam[$index].name"></span>'s characters
         </div>
         <div class="btn-group" ng-if="subdomain != 'my'" ng-show="fireteam[$index].otherCharacters.length > 1">
@@ -81,7 +81,7 @@
           </ul>
         </div>-->
         <div class="recent-players" ng-show="!$first">
-          <div class="edit-player-action__header">
+          <div class="player-overlay-content__header">
             <span ng-bind="fireteam[0].name + '\'s recent teammates'"></span>
           </div>
           <div class="recent-player" ng-repeat="player in recentPlayers track by $index">
