add lots of placeholders, add analytics to edit button, center player cards, refactor html

--- a/app/views/player/maps.html
+++ b/app/views/player/maps.html
@@ -1,29 +1,36 @@
 <div class="player-tab--maps player-maps">
   <div class="player-tab__section">
     <div class="row">
-      <div class="col-xs-12" ng-repeat="(key, value) in player.mapStats track by $index">
+      <!-- Mark, you can probably style this better. Consider this a placeholder for now. -->
+      <div class="col-xs-12" ng-if="!player.mapStats">
+        <div class="stat-row__header">
+          <span>No match history exists.</span>
+        </div>
+        <div class="row stat-row"></div>
+      </div>
+      <div class="col-xs-12" ng-if="player.mapStats" ng-repeat="(key, value) in player.mapStats track by $index">
         <div class="stat-row__header">
           <span ng-bind="DestinyTrialsDefinitions[key].activityName"></span>
         </div>
         <div class="row stat-row">
           <div class="col-xs-2 col-xs-offset-2 stat">
-            <span ng-bind="value.kills"></span>
+            <span ng-bind="value.kills || 0"></span>
             <label>Kills</label>
           </div>
           <div class="col-xs-2 stat">
-            <span ng-bind="value.deaths"></span>
+            <span ng-bind="value.deaths || 0"></span>
             <label>Deaths</label>
           </div>
           <div class="col-xs-2 stat">
-            <span ng-bind="value.assists"></span>
+            <span ng-bind="value.assists || 0"></span>
             <label>Assists</label>
           </div>
           <div class="col-xs-2 stat">
-            <span ng-bind="value.wins"></span>
+            <span ng-bind="value.wins || 0"></span>
             <label>Wins</label>
           </div>
           <div class="col-xs-2 stat">
-            <span ng-bind="value.losses"></span>
+            <span ng-bind="value.losses || 0"></span>
             <label>Loss</label>
           </div>
         </div>
@@ -36,23 +43,23 @@
     </div>
     <div class="row stat-row">
       <div class="col-xs-2 col-xs-offset-2 stat">
-        <span ng-bind="player.totals.kills"></span>
+        <span ng-bind="player.totals.kills || 0"></span>
         <label>Kills</label>
       </div>
       <div class="col-xs-2 stat">
-        <span ng-bind="player.totals.deaths"></span>
+        <span ng-bind="player.totals.deaths || 0"></span>
         <label>Deaths</label>
       </div>
       <div class="col-xs-2 stat">
-        <span ng-bind="player.totals.assists"></span>
+        <span ng-bind="player.totals.assists || 0"></span>
         <label>Assists</label>
       </div>
       <div class="col-xs-2 stat">
-        <span ng-bind="player.totals.wins"></span>
+        <span ng-bind="player.totals.wins || 0"></span>
         <label>Wins</label>
       </div>
       <div class="col-xs-2 stat">
-        <span ng-bind="player.totals.losses"></span>
+        <span ng-bind="player.totals.losses || 0"></span>
         <label>Loss</label>
       </div>
     </div>
