--- a/app/views/fireteam/index.html
+++ b/app/views/fireteam/index.html
@@ -12,5 +12,9 @@
 </div>
 
 <div ng-if="screenSize.md || screenSize.lg">
-  <div class="col-md-4" ng-repeat="player in fireteam track by $index" ng-include="'views/player/index.html'"></div>
+  <div class="col-md-4"
+       ng-repeat="player in fireteam track by $index"
+       ng-include="'views/player/index.html'"
+       ng-class="{'col-md-offset-2': $first && fireteam.length==2, 'col-md-offset-4': $first && fireteam.length==1}">
+  </div>
 </div>
