--- a/app/views/player/overview.html
+++ b/app/views/player/overview.html
@@ -12,7 +12,9 @@
           </span>
         </div>
       </div>
-      <span class="edit-player__btn shadow-z-1" ng-if="!subdomain && !$first" ng-click="toggleEdit(player)">
+      <span class="edit-player__btn shadow-z-1"
+            ng-if="!subdomain && !$first" ng-click="toggleEdit(player)"
+            analytics-on analytics-event="Click" analytics-category="Edit">
         <i class="material-icons">&#xE254;</i>
       </span>
     </div>
@@ -48,14 +50,11 @@
     <div class="row">
       <div class="player-quick-look__form col-xs-9">
         <div class="player-quick-look__form__matches" trials-history="player.pastActivities" player-kd="player.stats.killsDeathsRatio.basic.value"></div>
-        <label class="data-label">Recent Form</label>
+        <label class="data-label">Recent Matches</label>
       </div>
       <div class="player-quick-look__kd col-xs-3">
         <div class="player-quick-look__kd__nr">
-          <span ng-if="!player.stats.killsDeathsRatio.basic.displayValue">N/A</span>
-          <span ng-if="player.stats.killsDeathsRatio.basic.displayValue"
-                ng-bind="player.stats.killsDeathsRatio.basic.displayValue">
-          </span>
+          <span ng-bind="player.stats.killsDeathsRatio.basic.displayValue || 'N/A'"></span>
         </div>
         <label class="data-label">K/D</label>
       </div>
@@ -64,26 +63,16 @@
   <div class="player-main-stats">
     <div class="row">
       <div class="col-xs-3 stat">
-        <span ng-if="!player.stats.activitiesEntered.basic.value">0%</span>
-        <span ng-if="player.stats.activitiesEntered.basic.value"
-              ng-bind="(100 * player.stats.activitiesWon.basic.value / player.stats.activitiesEntered.basic.value).toFixed() + '%'">
-        </span>
+        <span ng-bind="player.stats.activitiesWinPercentage.basic.displayValue || 'N/A'"></span>
         <label>Wins</label>
       </div>
       <div class="col-xs-3 stat">
-        <span ng-if="!player.winStreak.length">N/A</span>
-        <span ng-if="player.winStreak.length"
-              ng-bind="player.winStreak.length">
-        </span>
-        <span class="match match--win player-main-stats__streak" ng-if="player.winStreak.type === 0"></span>
-        <span class="match match--loss player-main-stats__streak" ng-if="player.winStreak.type === 1"></span>
+        <span ng-bind="player.winStreak.length || 'N/A'"></span>
+        <span class="match player-main-stats__streak" ng-class="{'match--win': player.winStreak.type === 0, 'match--loss': player.winStreak.type === 1}"></span>
         <label>Streak</label>
       </div>
       <div class="col-xs-3 stat">
-        <span ng-if="!player.stats.combatRating.basic.displayValue">N/A</span>
-        <span ng-if="player.stats.combatRating.basic.displayValue"
-              ng-bind="player.stats.combatRating.basic.displayValue">
-        </span>
+        <span ng-bind="player.stats.combatRating.basic.displayValue || 'N/A'"></span>
         <label>Rating</label>
       </div>
       <div class="col-xs-3 stat">
@@ -94,13 +83,9 @@
     </div>
   </div>
   <div class="player-hazards">
-    <div class="player-hazard" ng-class="{'player-hazard--developer' : hazard === 'Site Developer', 'player-hazard--donator' : hazard === 'Site Donator'}"
-         ng-repeat="hazard in player.nonHazard track by $index" ng-bind="hazard"
-         bs-popover="{content:DestinyHazardDefinition[hazard]}">
-    </div><!--
-    --><div class="player-hazard"
-         ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index" ng-bind="hazard"
-         bs-popover="{content:DestinyHazardDefinition[hazard]}">
+    <div ng-repeat="hazard in player.nonHazard.concat(player.weapons.hazards, player.armors.hazards, player.classNodes.hazards) track by $index"
+         ng-bind="hazard" ng-class="{'player-hazard--developer': hazard === 'Site Developer', 'player-hazard--donator': hazard === 'Site Donator'}"
+         bs-popover="{content:DestinyHazardDefinition[hazard]}" class="player-hazard">
     </div>
     <div class="player-hazard player-hazard--none">
       This Guardian doesn't need cheap tricks
