Improved invalid and no trials player states for player cards

--- a/app/styles/elements/_tabs.scss
+++ b/app/styles/elements/_tabs.scss
@@ -5,6 +5,11 @@
     @include overlay-modifiers();
   }
 
+  .player.is-virgin & {
+    @include overlay-modifiers();
+    pointer-events: none;
+  }
+
   ul {
     overflow: hidden;
     margin-bottom: -1px;
