--- a/app/styles/parts/_player-main-stats.scss
+++ b/app/styles/parts/_player-main-stats.scss
@@ -2,7 +2,8 @@
   padding: $player-content-padding;
   border-top: 1px solid #eee;
 
-  .player.with-overlay & {
+  .player.with-overlay &,
+  .player.is-virgin & {
     @include overlay-modifiers();
   }
 }
