Alright you can watch gear and stats and stuff now if you havent played any trials games

--- a/app/styles/elements/_tabs.scss
+++ b/app/styles/elements/_tabs.scss
@@ -5,7 +5,12 @@
     @include overlay-modifiers();
   }
 
-  .player.is-virgin & {
+  .player.is-virgin & ul {
+    @include overlay-modifiers();
+    pointer-events: none;
+  }
+
+  .my-dtr .player.is-virgin & {
     @include overlay-modifiers();
     pointer-events: none;
   }
