--- a/app/views/player/index.html
+++ b/app/views/player/index.html
@@ -1,7 +1,6 @@
 <div class="player shadow-z-1"
      ng-class="{'with-overlay': player.isEditing, 'with-overlay is-invalid': player.name === 'Enter Player Name'}"
-     ng-if="fireteam[0].name && $index < 3"
-     ng-controller="PlayerCtrl">
+     ng-if="fireteam[0].name && $index < 3">
 
   <div ng-include="'views/player/overview.html'"></div>
 
