--- a/app/styles/parts/_player-hazards.scss
+++ b/app/styles/parts/_player-hazards.scss
@@ -5,8 +5,7 @@
   border-top: 1px solid #eee;
   line-height: 1;
 
-  .player.with-overlay &,
-  .player.is-virgin & {
+  .player.with-overlay & {
     @include overlay-modifiers();
   }
 }
