--- a/app/styles/parts/_player-main-stats.scss
+++ b/app/styles/parts/_player-main-stats.scss
@@ -2,8 +2,7 @@
   padding: $player-content-padding;
   border-top: 1px solid #eee;
 
-  .player.with-overlay &,
-  .player.is-virgin & {
+  .player.with-overlay & {
     @include overlay-modifiers();
   }
 }
