--- a/app/styles/parts/_player-overview.scss
+++ b/app/styles/parts/_player-overview.scss
@@ -1,6 +1,6 @@
 .player-overview {
   position: relative;
-  background-color: #333;
+  background-color: #2A333E;
   border-top-left-radius: $player-card-border-radius;
   border-top-right-radius: $player-card-border-radius;
 }
