--- a/app/styles/parts/_player.scss
+++ b/app/styles/parts/_player.scss
@@ -3,27 +3,6 @@
   border-radius: 1em;
   position: relative;
 
-  &.is-virgin {
-    &:after {
-      content: "";
-      position: absolute;
-      top: $player-emblem-size;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      z-index: 1;
-      background: linear-gradient(180deg, transparent 0%, rgba(255, 255, 255, 0.8) 20%, transparent 35%);
-      @include mild-inset-shadow();
-      border-bottom-left-radius: $player-card-border-radius;
-      border-bottom-right-radius: $player-card-border-radius;
-      pointer-events: none;
-
-      .my-dtr & {
-        background: linear-gradient(180deg, transparent 0%, rgba(255, 255, 255, 0.8) 40%);  
-      }
-    }
-  }
-
   &.is-invalid {
     .player-overlay__close {
       display: none;
@@ -47,8 +26,7 @@
   box-shadow: inset 0px 10px 8px -10px rgba(0,0,0,0.25);
   background: transparentize(#eee, .3);
 
-  .with-overlay &,
-  .is-virgin & {
+  .with-overlay & {
     @include overlay-modifiers();
   }
 }
