--- a/app/views/player/index.html
+++ b/app/views/player/index.html
@@ -1,5 +1,5 @@
 <div class="player shadow-z-1"
-     ng-class="{'with-overlay': player.isEditing, 'with-overlay is-invalid': player.name === 'Enter Player Name'}"
+     ng-class="{'with-overlay': player.isEditing, 'is-virgin': (player.name !== 'Enter Player Name' && !player.recentMatches), 'with-overlay is-invalid': player.name === 'Enter Player Name'}"
      ng-if="fireteam[0].name && $index < 3">
 
   <div ng-include="'views/player/overview.html'"></div>
@@ -8,10 +8,10 @@
     <tab class="player-tab--equipped" heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped">
       <div ng-include="'views/player/equipped.html'"></div>
     </tab>
-    <tab class="player-tab--last-matches" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches" disable="{{player.noRecentMatches}}">
+    <tab class="player-tab--last-matches" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
       <div ng-include="'views/player/last-matches.html'"></div>
     </tab>
-    <tab class="player-tab--stats" heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats" disable="{{player.noRecentMatches}}">
+    <tab class="player-tab--stats" heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
       <div ng-include="'views/player/stats.html'"></div>
     </tab>
   </tabset>
@@ -20,10 +20,10 @@
     <tab class="player-tab--stats" heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
       <div ng-include="'views/player/stats.html'"></div>
     </tab>
-    <tab class="player-tab--maps" heading="Maps" analytics-on analytics-event="Click" analytics-category="Maps" disable="{{player.noRecentMatches}}">
+    <tab class="player-tab--maps" heading="Maps" analytics-on analytics-event="Click" analytics-category="Maps">
       <div ng-include="'views/player/maps.html'"></div>
     </tab>
-    <tab class="player-tab--last-matches" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches" disable="{{player.noRecentMatches}}">
+    <tab class="player-tab--last-matches" heading="Last Matches" analytics-on analytics-event="Click" analytics-category="Last Matches">
       <div ng-include="'views/player/last-matches.html'"></div>
     </tab>
   </tabset>
