--- a/app/views/fireteam/index.html
+++ b/app/views/fireteam/index.html
@@ -13,7 +13,9 @@
 
 <div ng-if="screenSize.md || screenSize.lg">
   <div class="col-md-4"
+       ng-controller="PlayerCtrl as Player"
        ng-repeat="player in fireteam track by $index"
+       ng-model="player"
        ng-include="'views/player/index.html'"
        ng-class="{'col-md-offset-2': $first && fireteam.length == 2, 'col-md-offset-4': $first && fireteam.length == 1}">
   </div>
