--- a/app/views/player/equipped.html
+++ b/app/views/player/equipped.html
@@ -1,6 +1,6 @@
 <div class="player-tab--equipped">
   <div class="player-tab__section">
-    <div weapon-nodes="[player.weapons.primary, player.weapons.special, player.weapons.heavy]"></div>
+    <div weapon-nodes="[player.inventory.weapons.primary, player.inventory.weapons.special, player.inventory.weapons.heavy]"></div>
   </div>
   <div class="player-tab__section">
     <div class="row">
@@ -41,7 +41,7 @@
   </div>
   <div class="player-tab__section">
     <div class="row">
-      <div class="player-perk col-xs-6" ng-repeat="classNode in player.classNodes track by $index" bs-popover="{content:classNode.description}">
+      <div class="player-perk col-xs-6" ng-repeat="classNode in player.inventory.classNodes track by $index" bs-popover="{content:classNode.description}">
         <img class="player-perk__icon img-responsive" ng-src="{{classNode.icon}}" alt="{{classNode.name}}">
         <span class="player-perk__title" ng-bind="classNode.name"></span>
       </div>
@@ -49,7 +49,7 @@
   </div>
   <div class="player-tab__section">
     <div class="row">
-      <div armor-list="[player.armors.head, player.armors.arms, player.armors.chest, player.armors.legs]"></div>
+      <div armor-list="[player.inventory.armor.head, player.inventory.armor.arms, player.inventory.armor.chest, player.inventory.armor.legs]"></div>
     </div>
   </div>
 </div>
