--- a/app/styles/main/_layout.scss
+++ b/app/styles/main/_layout.scss
@@ -14,6 +14,15 @@
   max-width: 1080px;
 }
 
+@media all and (min-width: 960px) {
+  .wrapper {
+    height: 100vh;
+  }
+  .content {
+    overflow-y: auto;
+  }
+}
+
 @media all and (max-width: 1080px) {
   .content {
     padding: 15px 0;
