--- a/app/views/player/equipped.html
+++ b/app/views/player/equipped.html
@@ -4,36 +4,13 @@
   </div>
   <div class="player-tab__section">
     <div class="row">
-      <div class="player-cooldown col-xs-4" bs-popover="{content:'Intellect: ' + player.int + ' (' + player.intPercent + '%)'}">
-        <div class="player-cooldown__label">
-          Intellect
-        </div>
+      <div class="player-cooldown col-xs-4"
+           ng-repeat="stat in [player.characterInfo.stats.STAT_INTELLECT, player.characterInfo.stats.STAT_DISCIPLINE, player.characterInfo.stats.STAT_STRENGTH]"
+           bs-popover="{content: stat.display + ': ' + stat.value + ' (' + stat.percentage + '%)'}">
+        <div class="player-cooldown__label" ng-bind="stat.display"></div>
         <div class="player-cooldown__nr">
           <progress max="100" animate="true" class="progress not-rounded">
-            <bar value="player.intPercent" class="progress-bar-primary">
-            </bar>
-          </progress>
-        </div>
-      </div>
-      <div class="player-cooldown col-xs-4" bs-popover="{content:'Discipline: ' + player.dis + ' (' + player.disPercent + '%)'}">
-        <div class="player-cooldown__label">
-          Discipline
-        </div>
-        <div class="player-cooldown__nr">
-          <progress max="100" animate="true" class="progress not-rounded">
-            <bar value="player.disPercent" class="progress-bar-primary">
-            </bar>
-          </progress>
-        </div>
-      </div>
-      <div class="player-cooldown col-xs-4" bs-popover="{content:'Strength: ' + player.str + ' (' + player.strPercent + '%)'}">
-        <div class="player-cooldown__label">
-          Strength
-        </div>
-        <div class="player-cooldown__nr">
-          <progress max="100" animate="true" class="progress not-rounded">
-            <bar value="player.strPercent" class="progress-bar-primary">
-            </bar>
+            <bar value="stat.percentage" class="progress-bar-primary"></bar>
           </progress>
         </div>
       </div>
