--- a/app/views/player/equipped.html
+++ b/app/views/player/equipped.html
@@ -6,12 +6,14 @@
     <div class="row">
       <div class="player-cooldown col-xs-4"
            ng-repeat="stat in [player.characterInfo.stats.STAT_INTELLECT, player.characterInfo.stats.STAT_DISCIPLINE, player.characterInfo.stats.STAT_STRENGTH]"
-           bs-popover="{content: stat.display + ': ' + stat.value + ' (' + stat.percentage + '%)'}">
+           bs-popover="{title:stat.display, content:'Tier X - cooldown is 0:00<br>' + stat.value + ' / 170 (' + stat.percentage + '%)'}">
         <div class="player-cooldown__label" ng-bind="stat.display"></div>
         <div class="player-cooldown__nr">
-          <progress max="100" animate="true" class="progress not-rounded">
-            <bar value="stat.percentage" class="progress-bar-primary"></bar>
-          </progress>
+          <div style="display:inline-block; width:20%" ng-repeat="tier in [1,2,3,4,5]" ng-init="max=tier*34" ng-style="!$first ? {'padding-left':'1px'} : {}">
+            <progress max="34" animate="true" class="progress not-rounded">
+              <bar value="(stat.value > max ? max : stat.value) - ((tier - 1) * 34)" class="progress-bar-primary"></bar>
+            </progress>
+          </div>
         </div>
       </div>
     </div>
