enhancements to stat tiers

--- a/app/styles/parts/_player-cooldowns.scss
+++ b/app/styles/parts/_player-cooldowns.scss
@@ -23,3 +23,12 @@
 .player-cooldown__perc {
   padding-left: .5em;
 }
+
+.player-cooldown__tier {
+  display: inline-block;
+  width: 20%;
+}
+
+.player-cooldown__tier + .player-cooldown__tier {
+  padding-left: 1px;
+}
