--- a/app/views/player/equipped.html
+++ b/app/views/player/equipped.html
@@ -6,12 +6,12 @@
     <div class="row">
       <div class="player-cooldown col-xs-4"
            ng-repeat="stat in [player.characterInfo.stats.STAT_INTELLECT, player.characterInfo.stats.STAT_DISCIPLINE, player.characterInfo.stats.STAT_STRENGTH]"
-           bs-popover="{title:stat.display, content:'Tier X - cooldown is 0:00<br>' + stat.value + ' / 170 (' + stat.percentage + '%)'}">
-        <div class="player-cooldown__label" ng-bind="stat.display"></div>
+           bs-popover="{title:stat.name, content:'Tier ' + stat.tier + ' - cooldown is 0:00<br>' + stat.value + ' / 170 (' + stat.percentage + '%)'}">
+        <div class="player-cooldown__label" ng-bind="stat.name"></div>
         <div class="player-cooldown__nr">
-          <div style="display:inline-block; width:20%" ng-repeat="tier in [1,2,3,4,5]" ng-init="max=tier*34" ng-style="!$first ? {'padding-left':'1px'} : {}">
+          <div class="player-cooldown__tier" ng-repeat="value in stat.tiers track by $index">
             <progress max="34" animate="true" class="progress not-rounded">
-              <bar value="(stat.value > max ? max : stat.value) - ((tier - 1) * 34)" class="progress-bar-primary"></bar>
+              <bar value="value" class="progress-bar-primary"></bar>
             </progress>
           </div>
         </div>
