--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -6,19 +6,27 @@
           <img ng-src="{{currentMap.headerWideImage}}" class="img-responsive" alt="{{currentMap.activityName}}">
         </div>
         <div class="blog-post__title">
-          <h2>New Features!</h2>
+          <h2>Gearing up for 2.0</h2>
         </div>
         <ul class="blog-post__meta">
           <li>
-            <p><span class="material-icons">&#xE8DF;</span> August 28th, 2015</p>
+            <p><span class="material-icons">&#xE8DF;</span> September 10th, 2015</p>
           </li>
         </ul>
         <div class="blog-post__content">
           <p>
-            We added a couple of new surprises for you all.<br/>
-            Recent matches are now set up in a neat little line graph based on the players average KD.<br/>
-            Also we removed the "Last Match" tab...and replaced it with THREE matches instead of one!<br/>
-            Hopefully we ironed all the bugs out, if not please contact us...
+            Just in case you haven't heard the news, <strong>Trials is taking a break for the next few weeks.</strong><br/>
+            We haven't received any information about the return date but we promise to keep you posted as soon as that's announced.
+          </p>
+          <p>
+            The <strong>good news</strong> is that this gives us some time to update our UI with all the 2.0 changes.<br/>
+          </p>
+          <p>
+            We will be actively making changes so pardon our dust for the remained of the downtime.<br/>
+            That being said, the amount of new gear and features in TTK is going to be overwhelming and we welcome all suggestions.<br/>
+          </p>
+          <p>
+            Contact info below, see veryone soon!<br/>
           </p>
           <p>
             <strong>If you come across any issue, error, or just want to send us a suggestion you can
