--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -22,11 +22,11 @@
             The <strong>good news</strong> is that this gives us some time to update our UI with all the 2.0 changes.<br/>
           </p>
           <p>
-            We will be actively making changes so pardon our dust for the remained of the downtime.<br/>
+            We will be actively making changes so pardon our dust for the remainder of the downtime.<br/>
             That being said, the amount of new gear and features in TTK is going to be overwhelming and we welcome all suggestions.<br/>
           </p>
           <p>
-            Contact info below, see veryone soon!<br/>
+            Contact info below, see everyone soon!<br/>
           </p>
           <p>
             <strong>If you come across any issue, error, or just want to send us a suggestion you can
