--- a/app/styles/parts/_header.scss
+++ b/app/styles/parts/_header.scss
@@ -1,10 +1,10 @@
 header {
   position: relative;
   z-index: 1;
+  flex-grow: 1;
 }
 
 .header-bar {
-  background: $header-bg;
   padding: .75em 0;
 
   .header-bar__content {
