--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,8 @@
 <div class="wrapper" ng-class="{'my-dtr': subdomain}">
-  <header ng-include="'views/shared/header.html'" ng-controller="HeaderCtrl"></header>
+  <div class="controls shadow-z-1">
+    <header ng-include="'views/shared/header.html'" ng-controller="HeaderCtrl"></header>
+    <footer ng-include="'views/shared/footer.html'"></footer>
+  </div>
   <div class="content">
     <div class="container-fluid" ng-if="status">
       <div class="row">
@@ -8,12 +11,13 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid" ng-if="!status">
+    <div class="blog" ng-show="!fireteam[0] && !status">
+      <div ng-include="'views/blog/index.html'"></div>
+    </div>
+    <div class="players" ng-if="fireteam[0] && !status">
       <div class="row">
-        <div ng-include="'views/blog/index.html'" ng-show="!fireteam[0]"></div>
         <div ng-include="'views/fireteam/index.html'" ng-show="fireteam[0]"></div>
       </div>
     </div>
   </div>
-  <footer ng-include="'views/shared/footer.html'"></footer>
 </div>
