refactored subclass definitions in inventory

--- a/app/views/player/equipped.html
+++ b/app/views/player/equipped.html
@@ -20,9 +20,9 @@
   </div>
   <div class="player-tab__section">
     <div class="row">
-      <div class="player-perk col-xs-6" ng-repeat="classNode in player.inventory.classNodes track by $index" bs-popover="{content:classNode.description}">
-        <img class="player-perk__icon img-responsive" ng-src="{{classNode.icon}}" alt="{{classNode.name}}">
-        <span class="player-perk__title" ng-bind="classNode.name"></span>
+      <div class="player-perk col-xs-6" ng-repeat="subclassNode in player.inventory.subclass.displayedNodes track by $index" bs-popover="{content:subclassNode.description}">
+        <img class="player-perk__icon img-responsive" ng-src="{{subclassNode.icon}}" alt="{{subclassNode.name}}">
+        <span class="player-perk__title" ng-bind="subclassNode.name"></span>
       </div>
     </div>
   </div>
